[TBB-11] Fix imports y Refactor for CORS